<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">°C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AD + USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Disable voice dialling</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan devices</string>
    <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device">Handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">Application requests to turn on Bluetooth. Continue?</string>
    <string name="bluetooth_ask_discovery">Application requests to make your device visible to other Bluetooth devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_ask_enablement_and_discovery">Application requests to turn on Bluetooth and to make your device visible to other devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth…</string>
    <string name="bluetooth_scan_text">Empty button…</string>
    <string name="bluetooth_settings_text">Empty button…</string>
    <string name="bluetooth_enable_text">Empty button…</string>
    <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
    <string name="bluetooth_device_info_deviceInfo_text" />
    <string name="date_and_time">Date and time settings</string>
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Change time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="normal_date_format">Normal (%s)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label">Data:</string>
    <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
    <string name="intent_sender_action_label">Action:</string>
    <string name="intent_sender_startactivity_text">Start activity</string>
    <string name="radio_info_network_type_label">Network type:</string>
    <string name="settings_label">Settings</string>
    <string name="date_and_time_settings_title">Date and time</string>
    <string name="bluetooth_quick_toggle_title">Bluetooth</string>
    <string name="wifi_quick_toggle_title">Wi-Fi</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password.</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="dock_settings">Docking</string>
    <string name="sync_settings">Accounts and sync</string>
    <string name="search_settings">Search</string>
    <string name="display_settings">Display settings</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="storage_settings">SD card and phone storage</string>
    <string name="call_settings_title">Call settings</string>
    <string name="about_settings">About phone</string>
    <string name="applications_settings">Applications</string>
    <string name="language_settings">Locale and text</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="voice_input_output_settings">Voice input and output</string>
    <string name="privacy_settings">Privacy</string>
    <string name="g_sensor_title">Horizontal calibration</string>
    <string name="g_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="location_settings_title">Location service</string>
    <string name="settings_ics_radio">WIRELESS &amp; NETWORKS</string>
    <string name="settings_radio_more">More...</string>
    <string name="settings_ics_device">DEVICE</string>
    <string name="settings_ics_personal">PERSONAL</string>
    <string name="settings_ics_system_cap">SYSTEM</string>
    <string name="personal_settings_tab">Parts</string>
    <string name="program_settings_tab">Tools</string>
    <string name="tab_parts_cat_appearance_and_audio">APPEARANCE &amp; AUDIO</string>
    <string name="tab_core_cpu">CPU</string>
    <string name="core_cpucontrol">CPU Control</string>
    <string name="tab_core_tools">Other tools</string>
    <string name="core_cpustates">CPU States</string>
    <string name="parts_development">Spare Parts</string>
    <string name="parts_quickpaneltoggle">Quick Panel Settings</string>
    <string name="parts_statusbar">Status Bar</string>
    <string name="parts_lockscreen">LockScreen</string>
    <string name="parts_beats">DSP Manager</string>
    <string name="mod_version">Version</string>
    <string name="modder_id">Developer</string>
    <string name="launcher">Launcher Settings</string>
    <string name="powered">Powered by</string>
    <string name="powered_by">The Myth Team</string>
    <string name="screen_display">Lockscreen and Fonts</string>
    <string name="screen_display_summary" />
    <string name="header_add_an_account">Add accounts</string>
    <string name="bln">Back keys light</string>
</resources>