<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="parent">
        <Preference android:layout="@layout/preference_icon" android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" />
        <Preference android:layout="@layout/preference_icon" android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" />
        <Preference android:layout="@layout/preference_icon" android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" />
        <Preference android:layout="@layout/preference_icon" android:title="@string/mod_version" android:key="mod_version" android:summary="@string/device_info_default" />
        <Preference android:layout="@layout/preference_icon" android:title="@string/modder_id" android:key="modder_id" android:summary="@string/device_info_default" />
        <Preference android:layout="@layout/preference_icon" android:title="@string/powered" android:key="powered_id" android:summary="@string/powered_by" />
    </PreferenceCategory>
</PreferenceScreen>