<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/personal_settings_tab" android:key="parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/tab_parts_cat_appearance_and_audio" />
    <com.android.settings.IconPreferenceScreen android:title="@string/parts_beats" settings:icon="@drawable/icon_parts_beats">
        <intent android:targetPackage="com.bel.android.dspmanager" android:action="android.intent.action.MAIN" android:targetClass="com.bel.android.dspmanager.activity.DSPManager" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/launcher" settings:icon="@drawable/icon_launcher">
        <intent android:targetPackage="com.touchwiz.settings" android:action="android.intent.action.MAIN" android:targetClass="com.touchwiz.settings.MainActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/parts_lockscreen" settings:icon="@drawable/icon_parts_lockscreen">
        <intent android:targetPackage="com.lidroid.parts" android:action="android.intent.action.MAIN" android:targetClass="com.lidroid.parts.MainActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/parts_quickpaneltoggle" settings:icon="@drawable/icon_parts_quickpaneltoggle">
        <intent android:targetPackage="rom.features.parts" android:action="android.intent.action.MAIN" android:targetClass="rom.features.parts.MainActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/parts_statusbar" settings:icon="@drawable/icon_parts_statusbar">
        <intent android:targetPackage="com.emanon.statusbar.tweaks" android:action="android.intent.action.MAIN" android:targetClass="com.emanon.statusbar.tweaks.Main" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/bln" settings:icon="@drawable/bln">
        <intent android:targetPackage="neldar.bln.control.free" android:action="android.intent.action.MAIN" android:targetClass="neldar.bln.control.free.BlnSettings" />
    </com.android.settings.IconPreferenceScreen>
</PreferenceScreen>