<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/program_settings_tab" android:key="parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/tab_core_cpu" />
    <com.android.settings.IconPreferenceScreen android:title="@string/core_cpucontrol" settings:icon="@drawable/icon_core_cpucontrol">
        <intent android:targetPackage="it.sineo.android.noFrillsCPU" android:action="android.intent.action.MAIN" android:targetClass="it.sineo.android.noFrillsCPU.activity.MainActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/core_cpustates" settings:icon="@drawable/icon_core_cpustates">
        <intent android:targetPackage="com.bvalosek.cpuspy" android:action="android.intent.action.MAIN" android:targetClass="com.bvalosek.cpuspy.ui.HomeActivity" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/tab_core_tools" />
    <com.android.settings.IconPreferenceScreen android:title="@string/parts_development" settings:icon="@drawable/icon_parts_devtools">
        <intent android:targetPackage="com.android.spare_parts" android:action="android.intent.action.MAIN" android:targetClass="com.android.spare_parts.SpareParts" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="Development" settings:icon="@drawable/icon_parts_autostarts">
        <intent android:targetPackage="com.android.development" android:action="android.intent.action.MAIN" android:targetClass="com.android.development.Development" />
    </com.android.settings.IconPreferenceScreen>
</PreferenceScreen>